# PYSON

./: .gitignore  .replit  LICENSE  README.md  example.py  example.pyson  pyproject.toml  pyson.py  setup.py  tests.py
.github/workflows/: ci.yml  python-publish.yml
cpp/: CMakeLists.txt  example.cpp  pyson.hpp
python/: example.py
src/pyson_data/: .pypirc  __init__.py  pyson.py
tests/: example.py  example.pyson
