[project]
name = "pyson_data"
version = "0.1.3"
authors = [
  { name="josh-co", email="omegaraspberrypi@gmail.com" },
]
description = "Pyson package for .pyson data format support"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ProbablyComputingSquid/PYSON/"
Issues = "https://github.com/ProbablyComputingSquid/PYSON/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.hatch.build.targets.wheel]
packages = ["src/pyson_data"]
